syntax = "proto3";

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

service UserService {
  rpc AddUser(User) returns (User);
  rpc GetUser(GetUserRequest) returns (User);
  rpc ListUsers(Empty) returns (Users);
}

message GetUserRequest {
  int32 id = 1;
}

message Empty {}

message Users {
  repeated User users = 1;
}
